[gd_scene load_steps=5 format=3 uid="uid://bvyp8di51u61r"]

[ext_resource type="Script" uid="uid://c0iidw5g3885m" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c8npqlgeyy3xa" path="res://arrow3d/arrow_3d.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://csdcaadrse82r" path="res://야구베트.tscn" id="3_h2yge"]

[sub_resource type="Theme" id="Theme_h2yge"]
default_font_size = 48

[node name="Main" type="Node3D"]
script = ExtResource("1_ig7tw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, 15)
omni_range = 50.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
shadow_enabled = true
sky_mode = 1

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, 0.5, -0.5, 0, 0, 0)
shadow_enabled = true
sky_mode = 1

[node name="BallContainer" type="Node3D" parent="."]

[node name="왼쪽패널" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_h2yge")

[node name="LabelDrops" type="Label" parent="왼쪽패널"]
layout_mode = 2

[node name="LabelPerformance" type="Label" parent="왼쪽패널"]
layout_mode = 2

[node name="Label" type="Label" parent="왼쪽패널"]
layout_mode = 2
text = "생성속도"

[node name="생성속도" type="HSlider" parent="왼쪽패널"]
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.01
value = 1.0

[node name="Label2" type="Label" parent="왼쪽패널"]
layout_mode = 2
text = "발사속도"

[node name="발사속도" type="HSlider" parent="왼쪽패널"]
layout_mode = 2
min_value = 1.0
max_value = 50.0
step = 0.1
value = 20.0

[node name="Label3" type="Label" parent="왼쪽패널"]
layout_mode = 2
text = "화살표위치"

[node name="화살표위치" type="HSlider" parent="왼쪽패널"]
layout_mode = 2
step = 0.1
value = 50.0

[node name="WallContainer" type="Node3D" parent="."]

[node name="Timer공추가" type="Timer" parent="."]
autostart = true

[node name="Arrow3DShoot" parent="." instance=ExtResource("3_1bvp3")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="야구베트" parent="." instance=ExtResource("3_h2yge")]

[connection signal="value_changed" from="왼쪽패널/생성속도" to="." method="_on_생성속도_value_changed"]
[connection signal="timeout" from="Timer공추가" to="." method="_on_timer공추가_timeout"]
